fcdev: a host-jar write failure is its own FetchError, and network failures name their cause
FetchError.Offline carried String.valueOf(getMessage()) — "null" for the
JDK's ConnectException — and also stood for a local disk write failure.
Offline now carries Failures.describe(e); WriteFailed(dest, detail) is the
disk case, worded by StartCommand's exhaustive switch. Also fixes the
second argv assertion 0d97b3c6 missed (StartCommandFnHostFetchTest).
fcdev suite 265 green.

Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>